--- a/front-end/package.json
+++ b/front-end/package.json
@@ -17,6 +17,8 @@
     "@types/react": "^18.3.3",
     "@types/react-dom": "^18.3.0",
     "axios": "^1.7.2",
+    "date-fns": "^3.6.0",
+    "dayjs": "^1.11.12",
     "jwt-decode": "^4.0.0",
     "moment": "^2.30.1",
     "react": "^18.3.1",
@@ -30,6 +32,7 @@
     "redux-persist": "^6.0.0",
     "redux-saga": "^1.3.0",
     "redux-thunk": "^3.1.0",
+    "rsuite": "^5.69.0",
     "sass": "^1.77.5",
     "typescript": "^4.9.5",
     "web-vitals": "^2.1.4"
